force-app/main/default/objects/ProfessionalReference__c/ProfessionalReference__c.object-meta.xml
<CustomObject>
    <label>Professional Reference</label>
    <nameField>
        <displayFormat>PR-{00000}</displayFormat>
        <label>Reference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Professional References</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>