force-app/main/default/objects/ProfessionalReference__c/fields/ProviderCredential__c.field-meta.xml
<CustomField>
    <fullName>ProviderCredential__c</fullName>
    <label>Provider Credential</label>
    <referenceTo>ProviderCredential__c</referenceTo>
    <relationshipLabel>Professional References</relationshipLabel>
    <relationshipName>Professional_References</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>