force-app/main/default/objects/ProfessionalReference__c/fields/Reference_Name__c.field-meta.xml
<CustomField>
    <fullName>Reference_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reference Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>