force-app/main/default/objects/ProfessionalReference__c/fields/Reference_Phone__c.field-meta.xml
<CustomField>
    <fullName>Reference_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reference Phone</label>
    <type>Phone</type>
</CustomField>